# pygit

./: .gitignore  pyproject.toml
src/pygit/: __init__.py  base.py  cli.py  data.py
src/pygit/commands/: hash_git_object.py  hash_object.py  init.py
