[project]
name = "pygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ismail", email = "ismail@ismailtlemcani.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
