[project]
name = "pygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ismail", email = "ismail@ismailtlemcani.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
pygit = "pygit.cli:cli"
